audit_artifacts/2025-12-16_campaign_layers/py_compile_sample.txt
  File "aicmo/cam/auto.py", line 22
    db: Session,
      ^
SyntaxError: invalid syntax
